Get port form env var, add npm run build step to readme

--- a/start.sh.sample
+++ b/start.sh.sample
@@ -3,5 +3,7 @@ export WHICH_DB_STRING="dbname=<your db name> host=<your db host> user=<your db 
 export WHICH_GOOGLE_CLIENT_ID="<your google oauth client ID>"
 export WHICH_GOOGLE_CLIENT_SECRET="<your google oauth client secret>"
 export WHICH_GOOGLE_CALLBACK_URL="<your host>/auth/callback" # needs to be allowed in the Google Oauth Console
-cd /home/username/which # absolute path to the top which directory
-./which_server
+export WHICH_PORT=":80"
+cd /path/to/which # absolute path to the top which directory
+# go run server/main.go # compile and run
+./which_server # run compiled executable
